[gd_scene load_steps=22 format=2]

[ext_resource path="res://Room/Home (Night Ver.).wav" type="AudioStream" id=1]
[ext_resource path="res://Room/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Room/Volleyball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Room/walls.png" type="Texture" id=4]
[ext_resource path="res://Room/finalwoodtile.png" type="Texture" id=5]
[ext_resource path="res://Player/steps.wav" type="AudioStream" id=7]
[ext_resource path="res://UI/RPGSystem.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Room/finalrug.png" type="Texture" id=9]
[ext_resource path="res://UI/talksprite-protag-Sheet.png" type="Texture" id=10]
[ext_resource path="res://UI/dialogue.png" type="Texture" id=11]
[ext_resource path="res://Room/Bed.tscn" type="PackedScene" id=12]
[ext_resource path="res://Room/TrophyCase.tscn" type="PackedScene" id=13]
[ext_resource path="res://Room/Door.tscn" type="PackedScene" id=14]
[ext_resource path="res://Room/Closet.tscn" type="PackedScene" id=15]
[ext_resource path="res://Room/Dresser.tscn" type="PackedScene" id=16]
[ext_resource path="res://Room/Desk.tscn" type="PackedScene" id=17]
[ext_resource path="res://UI/DialogueBox.gd" type="Script" id=18]

[sub_resource type="TileSet" id=1]
0/name = "walls.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 54, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 63, Vector2( 3, 1 ), 216, Vector2( 3, 2 ), 219, Vector2( 3, 3 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=3]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 0 ]
}

[node name="Bedroom" type="YSort"]
position = Vector2( 30, 10 )

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 48, 40 )
scale = Vector2( 0.5, 0.5 )
z_index = -3
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( -32, -23, 189, 92 )

[node name="WallTileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 2, 65536, 0, 131072, 65537, 0, 131073, 65538, 0, 131074 )

[node name="WallCollider" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WallCollider"]
polygon = PoolVector2Array( 2, 17, 94, 17, 94, 2, 2, 2 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="WallCollider"]
polygon = PoolVector2Array( 2, 17, 0, 17, 0, 64, 96, 64, 96, 17, 94, 17, 94, 62, 2, 62 )

[node name="Rug" type="Sprite" parent="."]
position = Vector2( 48.25, 40 )
scale = Vector2( 0.5, 0.5 )
z_index = -2
texture = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 49, 26 )
collision_layer = 3

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true

[node name="Walking" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="Desk" parent="." instance=ExtResource( 17 )]
position = Vector2( 13, 55 )

[node name="Bed" parent="." instance=ExtResource( 12 )]
position = Vector2( 10, 19 )

[node name="Closet" parent="." instance=ExtResource( 15 )]
position = Vector2( 74, 14 )

[node name="TrophyCase" parent="." instance=ExtResource( 13 )]
position = Vector2( 88, 15 )

[node name="Dresser" parent="." instance=ExtResource( 16 )]
position = Vector2( 24, 16 )

[node name="Volleyball" parent="." instance=ExtResource( 3 )]
position = Vector2( 65, 17 )
z_index = -1

[node name="Door" parent="." instance=ExtResource( 14 )]
position = Vector2( 91, 28 )

[node name="BedroomMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -17.0
pitch_scale = 0.5
autoplay = true
__meta__ = {
"_editor_description_": "bedroom music"
}

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="Control" parent="UserInterface"]
visible = false
margin_left = 52.0
margin_top = 71.0
margin_right = 111.0
margin_bottom = 87.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UserInterface/DialogueBox"]
margin_left = -28.0
margin_top = -10.0
margin_right = 85.0
margin_bottom = 16.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="UserInterface/DialogueBox"]
anchor_left = 1.1
anchor_top = 0.975
anchor_right = 3.425
anchor_bottom = 1.375
margin_left = -66.9
margin_top = -19.6
margin_right = -121.075
margin_bottom = -9.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UserInterface/DialogueBox"]
position = Vector2( -15, 3 )
scale = Vector2( 0.296875, 0.296875 )
texture = ExtResource( 10 )
offset = Vector2( 0, 1 )
hframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInterface/DialogueBox"]
anims/Stop = SubResource( 3 )
anims/Talk = SubResource( 4 )

[node name="Tween" type="Tween" parent="UserInterface/DialogueBox"]
[connection signal="interactable" from="Player" to="UserInterface/DialogueBox" method="_on_Player_interactable"]
[connection signal="dialogue_complete" from="UserInterface/DialogueBox" to="Desk" method="_on_DialogueBox_dialogue_complete"]
[connection signal="freeze_character" from="UserInterface/DialogueBox" to="Player" method="_on_DialogueBox_freeze_character"]
[connection signal="tween_completed" from="UserInterface/DialogueBox/Tween" to="UserInterface/DialogueBox" method="_on_Tween_tween_completed"]
